# atyx_notify_client

./: .gitignore  pyproject.toml
atyx_notify_client/: __init__.py
tests/: test_atyx_notify_client.py
