[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atyx-notify-client"
version = "0.3.0"
description = "Client library for Atyx Notify API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "freezegun>=1.0",
]

[tool.setuptools.packages.find]
include = ["atyx_notify_client*"]
